# crm-imobiliario

./: .gitignore  start_crm_launcher.sh
Referencia/: CRM_Imobiliario_Prompt.docx  Extração  HTTP_Request.json
crm-imobiliario/: .gitignore  fix_editando.py  index.html  package-lock.json  package.json
crm-imobiliario/public/: sjc_bairros.geojson
crm-imobiliario/scripts/: fix_editando.py
crm-imobiliario/src/: App.tsx  index.css
crm-imobiliario/src/components/: AppLayout.tsx  BottomNav.tsx  LocationPicker.tsx  MapView.tsx  PrivateRoute.tsx  Sidebar.tsx
message_bot/: main.py  requirements.txt
migrations/: 001_create_profiles.sql  002_create_kanban_colunas.sql  003_create_contatos.sql  004_alter_imoveis.sql  005_alter_imoveis_crm.sql  005_rls_policies.sql  006_campos_pessoais_origem.sql  007_trigger_imovel_defaults.sql  012_scraper_stats.sql  013_scraper_detailed_logs.sql  README.md
scraper/: .env.example  auto_login.py  check_db.py  create_session.py  cron.py  get_url.py  main.py  olx_page.html  olx_session.json  orchestrator.py  pegar_cookies_nativos.py  pyproject.toml  start.sh  test_db.py  test_db_industrial.py  test_pw.py  test_pydantic.py  test_schema.py  test_urls.py
scraper/migrations/: 008_campos_prospeccao_imovel.sql  009_tabelas_prospeccao_chat.sql  010_configuracoes_ia.sql  011_url_chat.sql
scraper/tools/: browser_manager.py  chat_reader.py  chat_sender.py  geocode_signals.py  geocoder.py  geocoder_google.py  geocoder_google_reprocess.py  geocoder_reprocess.py  migrate_geocode_columns.py  phone_extractor.py  search_tools.py
(+23 files in other folders)
